--- a/Templates/Customer/booking.html
+++ b/Templates/Customer/booking.html
@@ -23,9 +23,13 @@
                 <h5>This Booking was canceled</h5>
                 <p>Reason: {{ book.canceled.reason }}</p>
                 <p>Canceled on - {{ book.canceled.date }}</p>
+                <p>Canceled By - {{ book.canceled.canceledBy }}</p>
             {% else %}
 {#                <a class="waves-effect waves-light btn" href="/doctor/call/{{ book._id }}">Start/Join Call Session</a>#}
-{#                <a class="waves-effect waves-light btn" href="/doctor/cancel-booking/{{ book._id }}">Cancel Session</a>#}
+                {% if bookings.start < current and bookings.end>current %}
+                    <a href="/customer/call/{{ booking._id }}">Start/Join Call Session</a>
+                {% endif %}
+                <a class="waves-effect waves-light btn" href="/customer/cancel-booking/{{ book._id }}">Cancel Session</a>
             {% endif %}
         </div>
     </div>
