--- a/Templates/Doctor/booking_details.html
+++ b/Templates/Doctor/booking_details.html
@@ -23,6 +23,7 @@
             <h5>This Booking was canceled</h5>
             <p>Reason: {{ book.canceled.reason }}</p>
             <p>Canceled on - {{ book.canceled.date }}</p>
+            <p>Canceled By - {{ book.canceled.canceledBy }}</p>
         {% else %}
             <a class="waves-effect waves-light btn" href="/doctor/call/{{ book._id }}">Start/Join Call Session</a>
             <a class="waves-effect waves-light btn" href="/doctor/cancel-booking/{{ book._id }}">Cancel Session</a>
