Bug fix , my patients will now show right output,autosave on the markdown fixed

--- a/Templates/Doctor/edit-markdown.html
+++ b/Templates/Doctor/edit-markdown.html
@@ -56,7 +56,7 @@
 			element: document.getElementById("mdTextArea"),
 			autosave: {
 				enabled: true,
-				uniqueId: "MyUniqueID",
+				uniqueId: "{{ patientID }}:{{ resourceID }}",
 				delay: 1000,
 				submit_delay: 5000,
 				timeFormat: {
