--- a/Templates/Doctor/patient.html
+++ b/Templates/Doctor/patient.html
@@ -232,7 +232,7 @@
 						element: document.getElementById("mdTextArea"),
 						toolbar: false,
 						minHeight: "70vh",
-						initialValue: result
+						initialValue:atob(result)
 					});
 
 					if (!easyMDE.isPreviewActive()) {
