side nav categories added
side nav categories added and applied to all other pages

--- a/Templates/Customer/book.html
+++ b/Templates/Customer/book.html
@@ -8,6 +8,11 @@
 	{% include "./navbar.html" %}
 {% endblock %}
 
+{% block sidebar %}
+{% include "./sidebar.html" %}
+   
+{% endblock %}
+
 {% block body %}
 	<div class="container">
 		<div class="row" style="margin-top:2em">
