--- a/Templates/Customer/booking.html
+++ b/Templates/Customer/booking.html
@@ -3,7 +3,10 @@
 {% block navbar %}
     {% include "./navbar.html" %}
 {% endblock %}
-
+{% block sidebar %}
+{% include "./sidebar.html" %}
+   
+{% endblock %}
 {% block body %}
     <div class="container">
         <h3 class="blue-text">Booking Details</h3>
