--- a/Templates/Customer/call.html
+++ b/Templates/Customer/call.html
@@ -4,7 +4,10 @@
 	{% include "./navbar.html" %}
 {% endblock %}
 
-
+{% block sidebar %}
+{% include "./sidebar.html" %}
+   
+{% endblock %}
 {% block body %}
 	<div class="container">
 		<h3 class="blue-text">Stream</h3>
