--- a/Templates/Customer/cancel-booking.html
+++ b/Templates/Customer/cancel-booking.html
@@ -3,6 +3,10 @@
 {% block navbar %}
     {% include "./navbar.html" %}
 {% endblock %}
+{% block sidebar %}
+{% include "./sidebar.html" %}
+   
+{% endblock %}
 
 {% block body %}
     <div class="container">
