--- a/Templates/Customer/hosp-info.html
+++ b/Templates/Customer/hosp-info.html
@@ -4,6 +4,10 @@
 {% include "./navbar.html" %}
 {% endblock %}
 
+{% block sidebar %}
+{% include "./sidebar.html" %}
+   
+{% endblock %}
 {% block body %}
 
 <div class="parallax-container">
