--- a/Templates/Defaults/default.html
+++ b/Templates/Defaults/default.html
@@ -56,6 +56,24 @@
           }
         });
       });
+      
+    </script>
+    <script>
+      	$(document).ready(function(){
+			$('.sidenav').sidenav();
+		});
+
+		$(document).ready(function(){
+			$('.collapsible').collapsible();
+		});
+		$(document).ready(function() {
+			$("select").formSelect();
+		});
+
+		$(".dropdown-trigger").dropdown();
+		$(document).ready(function() {
+			$(".modal").modal();
+		});
     </script>
   </body>
 </html>
