--- a/Templates/Customer/login.html
+++ b/Templates/Customer/login.html
@@ -10,22 +10,22 @@
 						<form class="col s12" method='post'>
 							<center style="padding-bottom: 2em;">
 								<img class="responsive-img" style="width: 250px;" src="https://i.imgur.com/ax0NCsK.gif"/>
-								<h5 class="indigo-text">Please, login into your account</h5>
+								<h5 class="indigo-text">{{ "signup.pls" | translate }}</h5>
 							</center>
 							<div class="row">
 								<div class="input-field col s12">
 									<input required="" aria-required="true" name="email" id="email" type="email" class="validate">
-									<label for="email">Email</label>
+									<label for="email">{{ "signup.email" | translate }}</label>
 								</div>
 							</div>
 							<div class="row">
 								<div class="input-field col s12">
 									<input name="password" required="" aria-required="true" id="password" type="password" class="validate">
-									<label for="password">Password</label>
+									<label for="password">{{ "signup.pass" | translate }}</label>
 								</div>
 							</div>
 							<center>
-								<button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Login
+								<button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">{{ "signup.login" | translate }}
                             <i class="material-icons right">send</i>
 								</button>
 							</center>
