--- a/Templates/Customer/sidebar.html
+++ b/Templates/Customer/sidebar.html
@@ -3,26 +3,30 @@
             <div class="background">
                 <!-- <img src="images/office.jpg"> -->
             </div>
-            <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
-            <a href="#name"><span class="name">John Doe</span></a>
-            <a href="#email"><span class="email">jdandturk@gmail.com</span></a>
+            <a href="#user"><img class="circle" src="{{ req.session.email | emailToImg}}"></a>
+            <a href="#name"><span class="name">{{ req.session.name }}</span></a>
+            <a href="#email"><span class="email">{{ req.session.email }}</span></a>
         </div></li> 
         <li>
-            <a href="/customer/history">Patient History</a>
+            <a href="/customer/">{{ "sidebar.home" | translate }}</a>
 
         </li>
         <li>
-            <a href="/customer/booking">Book a session</a>
+            <a href="/customer/history">{{ "sidebar.history" | translate }}</a>
 
         </li>
         <li>
-            <a href="/customer/my-bookings">My Bookings</a>
+            <a href="/customer/booking">{{ "sidebar.book" | translate }}</a>
+
+        </li>
+        <li>
+            <a href="/customer/my-bookings">{{ "sidebar.session" | translate }}</a>
 
         </li>
     <li>
         <ul class="collapsible collapsible-accordion" style="padding-left: 16px;">
             <li class="bold">
-              <div class="collapsible-header waves-effect waves-teal"><b>Specialities</b></div>
+              <div class="collapsible-header waves-effect waves-teal"><b>{{ "sidebar.specs" | translate }}</b></div>
               <div class="collapsible-body"><ul>
                 {% for i in range(0, 55) -%}
                 <li>
@@ -34,5 +38,5 @@
           </ul>
     </li>
      
-    <li><a class="waves-effect" href="#!">Logout</a></li>
+    <li><a class="waves-effect" href="/customer/logout">{{ "sidebar.logout" | translate }}</a></li>
 </ul>
