--- a/Templates/Doctor/settings.html
+++ b/Templates/Doctor/settings.html
@@ -48,12 +48,6 @@
 			</div>
 			<div class="row">
 				<div class="input-field col s12">
-					<input  name="speciality" id="speciality" type="text" class="validate">
-					<label for="speciality">Speciality</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="input-field col s12">
 					<select multiple name="language">
 						<option value="hi" selected>Hindi</option>
 						<option value="en">English</option>
@@ -72,39 +66,39 @@
 				</div>
 			</form>
 		</div>
-		<div class="divider"></div>
-		<form action="/admin/changepassword" class="container" method="post">
-			<div class="row">
-				<h4>Change Password</h4>
-			</div>
-			<div class="row">
-				<div class="input-field col s12">
-					<input required="" aria-required="true" name="oldPassword" id="oldPassword" type="password" class="validate">
-					<label for="oldPassword">Old Password</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="input-field col s12">
-					<input required="" aria-required="true" name="password" id="password" type="password" class="validate">
-					<label for="password">New Password</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="input-field col s12">
-					<input required="" aria-required="true" name="confPassword" id="passwordConfirm" type="password" class="validate">
-					<label for="passwordConfirm"  data-error="Password not match" data-success="Password Match">Confirm New Password</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="input-field col s12">
-					<center>
-						<button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Change Password
-                            <i class="material-icons right">send</i>
-						</button>
-					</center>
-				</div>
-			</div>
-		</div>
+{#		<div class="divider"></div>#}
+{#		<form action="/doctor/changepassword" class="container" method="post">#}
+{#			<div class="row">#}
+{#				<h4>Change Password</h4>#}
+{#			</div>#}
+{#			<div class="row">#}
+{#				<div class="input-field col s12">#}
+{#					<input required="" aria-required="true" name="oldPassword" id="oldPassword" type="password" class="validate">#}
+{#					<label for="oldPassword">Old Password</label>#}
+{#				</div>#}
+{#			</div>#}
+{#			<div class="row">#}
+{#				<div class="input-field col s12">#}
+{#					<input required="" aria-required="true" name="password" id="password" type="password" class="validate">#}
+{#					<label for="password">New Password</label>#}
+{#				</div>#}
+{#			</div>#}
+{#			<div class="row">#}
+{#				<div class="input-field col s12">#}
+{#					<input required="" aria-required="true" name="confPassword" id="passwordConfirm" type="password" class="validate">#}
+{#					<label for="passwordConfirm"  data-error="Password not match" data-success="Password Match">Confirm New Password</label>#}
+{#				</div>#}
+{#			</div>#}
+{#			<div class="row">#}
+{#				<div class="input-field col s12">#}
+{#					<center>#}
+{#						<button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Change Password#}
+{#                            <i class="material-icons right">send</i>#}
+{#						</button>#}
+{#					</center>#}
+{#				</div>#}
+{#			</div>#}
+{#		</form>#}
 		<div class="divider"></div>
 		<div class="container">
 			<div class="row">
@@ -115,6 +109,24 @@
 				</div>
 			</div>
 		</div>
+		<div class="divider"></div>
+		<div class="container">
+			<form action="/doctor/changespec" method="post" id="submitform">
+				<div class="input-field col s12">
+					<div class="chips">
+						<input class="custom-class" name="speciality" id="speciality" type="text">
+					</div>
+				</div>
+				<div class="input-field col s12">
+					<center>
+						<button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Update Speciality
+							<i class="material-icons right">send</i>
+						</button>
+					</center>
+				</div>
+			</form>
+		</div>
+		<div class="divider"></div>
 	{% endblock %}
 
 	{% block end %}
@@ -152,6 +164,29 @@
 						.removeClass("invalid")
 						.addClass("valid");
 				}
+			});
+
+			document.addEventListener('DOMContentLoaded', function() {
+				let data= [
+				{% for x in doc.speciality %}
+					{ tag:"{{ x }}" },
+				{% endfor %}
+				]
+				var elems = document.querySelectorAll('.chips');
+				var instances = M.Chips.init(elems, {
+					data:data
+				});
+			});
+
+			$("#submitform").submit(function (eventObj) {
+				var chipInstance = M.Chips.getInstance($(".chips"));
+				let data = {specialties : chipInstance.chipsData};
+				$("<input />")
+						.attr("type", "hidden")
+						.attr("name", "json")
+						.attr("value", JSON.stringify(data))
+						.appendTo("#submitform");
+				return true;
 			});
 		</script>
 	{% endblock %}
