dropdown language and specialities (home)

--- a/Templates/Customer/index.html
+++ b/Templates/Customer/index.html
@@ -36,13 +36,88 @@
 
         <div class="row">
             <div class="col s12 l2 hide-on-med-and-down" style="height:39em;overflow:auto;">
-                {% for i in range(0, 10) -%}
+                
                     <div style="margin-bottom: 2em;">
-                        <img src={{ "joshabi1999@gmail.com" | emailToImg }} alt="" class="circle responsive-img">
-                        <center><h5>jojo</h5></center>
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRKyIOTZPtsjLIXNUdOXmCOsIHFO8Q7VgvpfA&usqp=CAU" alt="" class="circle responsive-img">
+                        <center><h5>Ear Nose Throat</h5></center>
                     </div>
 
-                {% endfor %}
+                    <div style="margin-bottom: 2em;">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS9XuBcibYTv1rGdFw7WRJ1tHrrYcCNNQkLzg&usqp=CAU" alt="" class="circle responsive-img">
+                        <center><h5>Gastroenterology</h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQY6iNHLepZwmytN6rfhWniYeIneqKXgTZAJQ&usqp=CAU" alt="" class="circle responsive-img">
+                        <center><h5> Urology</h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ_nsRFkcLElfW4JHGZK-ij9r1hwe-Dw-FK8Q&usqp=CAU" alt="" class="circle responsive-img">
+                        <center><h5> Cardiology</h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSwWWIdoOo3sFPtfNUcLs7G1n1hUwB0hlL_TQ&usqp=CAU" alt="" class="circle responsive-img">
+                        <center><h5> Neurology </h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    <div style="margin-bottom: 2em;">
+                        <img src= alt="" class="circle responsive-img">
+                        <center><h5></h5></center>
+                    </div>
+
+                    
             </div>
             <div class="col s12 l10">
                 <img class="responsive-img" src="/static/images/muscles.png">
