--- a/Templates/Customer/navbar.html
+++ b/Templates/Customer/navbar.html
@@ -68,15 +68,26 @@
 			</ul>
 			<a href="#" class="brand-logo center">Logo</a>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a href="sass.html">Sass</a></li>
+				<!-- <a class='dropdown-trigger btn' href='#' data-target='dropdown2' >Drop Me! </a> -->
+	
+				<!-- <li><a href="sass.html">Sass</a></li>
 				<li><a href="badges.html">Components</a></li>
-				<li><a href="collapsible.html">JavaScript</a></li>
+				<li><a href="collapsible.html">JavaScript</a></li> -->
+				<li><div class="input-field col s3 right-align white-text">
+					<select class="white-text" onchange="javascript:handleLang(this)">
+					  <option value="" disabled selected class="white-text"><span class="white-text">Select Language</span></option>
+					  {% for code,lang in allLangs %}
+					  <option value="?lng={{ code }}">{{ lang }}</option>
+					  {% endfor %}
+					</select>
+				  </div>
+				</li>
 			</ul>
 		</div>
 
 
 
-{#		<div class="nav-wrapper">#}
+<!-- {#		<div class="nav-wrapper">#}
 {#			#}{# <ul class="left">#}
 {#					<li>#}
 {#						<a>#}
@@ -109,7 +120,8 @@
 {#						</a>#}
 {#					</li> #}
 {#			</ul>#}
-{#		</div>#}
+{#		</div>#} -->
+
 	</nav>
 </div>
 
@@ -128,3 +140,12 @@
 		<a href="#!" class="modal-close waves-effect waves-green btn-flat">Apply</a>
 	</div>
 </div>
+
+<script type="text/javascript"> 
+	function handleLang(elm) 
+	{ 
+	window.location = window.location.pathname + elm.value; 
+	} 
+
+	</script> 
+	
